# FastClime

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  fastclime  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/: index.md  mkdocs.yml  modules.md
docs/auto/: m0_storage.md  m2_dynamic.md  m3_ml.md
env/: Dockerfile  devcontainer.json  docker-compose.yml  environment.yml
src/fastclime/: __init__.py  __main__.py  cli.py  config.py
src/fastclime/core/: logging.py
src/fastclime/m0_storage/: __init__.py  catalog.py  cli.py  io.py
src/fastclime/m1_etl/: __init__.py  cli.py  constants.py  orchestrator.py  utils.py
src/fastclime/m1_etl/datasets/: __init__.py  dem.py  ndvi.py  smap.py
src/fastclime/m2_dynamic/: __init__.py  cli.py  equations.py  orchestrator.py  utils.py
src/fastclime/m3_ml/: cli.py  const.py  datasets.py  features.py  serve.py  train.py
src/fastclime/m3_ml/models/: base.py  lamina_reg.py  stress_clf.py
src/fastclime/m4_dashboard/: cli.py
tests/: conftest.py  test_dynamic.py  test_etl.py  test_smoke.py  test_storage.py
tests/ml/: test_features.py  test_models.py  test_predict_batch.py  test_train_small.py
